Fixed iPad Pro Alignment Issues bug

--- a/src/Components/TechIKnow/TechIKnow.css
+++ b/src/Components/TechIKnow/TechIKnow.css
@@ -32,12 +32,3 @@
     margin-top: -10px;
   }
 }
-@media screen and (min-width: 982px) and (max-width: 1041px) {
-  .frameworks-wrapper,
-  .devops-wrapper,
-  .database-wrapper,
-  .languages-wrapper {
-    margin-left: 22.5%;
-    width: 100vw;
-  }
-}
